deploy2-copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment2
  namespace: ns2
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: ahmedelenany703/app:v2.0.0
        ports:
        - containerPort: 3000
