svc1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
