svc2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
