ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-hosts-ingress
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc1
                port:
                  number: 80
    - host: app2.example.com
      http:
        paths:
          - path: /features
            pathType: Prefix
            backend:
              service:
                name: svc2
                port:
                  number: 80
